--- a/css/styles.css
+++ b/css/styles.css
@@ -31,9 +31,12 @@ html, body {
 .heading {
     text-align: center;
 }
-h2 {
+h3 {
     color: var(--color-primary-dark);
     font-size: 1.3em;
+    margin-left: 4px;
+    padding: 16px;
+    border-left: 4px solid indigo;
 }
 .content {
     position: fixed;
@@ -101,6 +104,7 @@ a.list-group-item {
     margin: 4px;
     border-radius: 2px;
     box-shadow: 0 2px 4px #dde;
+    overflow-y: auto;
 }
 a.list-group-item:hover {
     background-color: var(--color-primary-light);
@@ -129,6 +133,38 @@ img.avatar {
     img.avatar:hover {
         width: 320px;
     }
+}
+
+/*============================================================================*/
+
+#blog-post__list {
+    list-style-type: none;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
+.blog-post__listitem {
+    padding: 16px;
+    margin: 1em;
+    background-color: whitesmoke;
+    font: 1.1em Arial, Helvetica, sans-serif;
+    color: black;
+    clear: both;
+    overflow-y: auto;
+    text-align: justify;
+}
+.blog-post__listitem a {
+    color: var(--color-primary-accent);
+}
+span.date {
+    float: right;
+    font-size: 0.750em;
+    text-align: right;
+}
+a img {
+    width: 36px;
+    float: right;
+    margin-top: 4px;
 }
 
 /*============================================================================*/
