--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/*============================================================================*
+ * Colors
+ *============================================================================*/
+
 :root {
     --color-primary: #3F51B5;
     --color-primary-dark: #1A237E;
@@ -5,7 +9,9 @@
     --color-primary-accent: #3D5AFE;
 }
 
-/*============================================================================*/
+/*============================================================================*
+ * Layout
+ *============================================================================*/
 
 html, body {
     width: 100%;
@@ -18,6 +24,8 @@ html, body {
     color: black;
 }
 .header {
+    position: fixed;
+    top: 0;
     width: 100%;
     height: 56px;
     line-height: 56px;
@@ -50,7 +58,9 @@ h3 {
     -webkit-overflow-scrolling: touch;
 }
 
-/*============================================================================*/
+/*============================================================================*
+ * Navigation
+ *============================================================================*/
 
 .navbar {
     position: fixed;
@@ -96,7 +106,9 @@ h3 {
     color: var(--color-primary-dark);
 }
 
-/*============================================================================*/
+/*============================================================================*
+ * Override Bootstrap list-group-item class
+ *============================================================================*/
 
 a.list-group-item {
     color: var(--color-primary);
@@ -111,31 +123,9 @@ a.list-group-item:hover {
     color: var(--color-primary-dark);
 }
 
-/*============================================================================*/
-
-img.avatar {
-    height: auto;
-    margin: 0 auto;
-    will-change: width;
-    transition-property: width;
-    transition-duration: 0.6s;
-    transition-timing-function: linear;
-}
-@media only screen and (max-width: 768px) {
-    img.avatar {
-        width: 192px;
-    }
-}
-@media only screen and (min-width: 768px) {
-    img.avatar {
-        width: 255px;
-    }
-    img.avatar:hover {
-        width: 320px;
-    }
-}
-
-/*============================================================================*/
+/*============================================================================*
+ * Blog
+ *============================================================================*/
 
 #blog-post__list {
     list-style-type: none;
@@ -161,10 +151,61 @@ span.date {
     font-size: 0.750em;
     text-align: right;
 }
+
+/*============================================================================*
+ * Contact
+ *============================================================================*/
+
+.social-media-link__list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0 0 32px 0;
+}
+.social-media-link {
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    border-radius: 4px;
+    padding: 8px;
+    margin: 4px;
+}
+.social-media-link:hover {
+    background-color: var(--color-primary-light);
+    color: var(--color-primary-dark);
+}
+.social-media-link a {
+    color: var(--color-primary);
+}
+.social-media-link a:hover {
+    color: var(--color-primary-accent);
+}
 a img {
     width: 36px;
     float: right;
-    margin-top: 4px;
+    margin: 8px 8px 0 0;
+}
+p {
+    margin: 0;
+}
+img.avatar {
+    height: auto;
+    margin: 0 auto;
+    padding-bottom: 8px;
+    will-change: width;
+    transition-property: width;
+    transition-duration: 0.6s;
+    transition-timing-function: linear;
+}
+@media only screen and (max-width: 768px) {
+    img.avatar {
+        width: 192px;
+    }
+}
+@media only screen and (min-width: 768px) {
+    img.avatar {
+        width: 255px;
+    }
+    img.avatar:hover {
+        width: 320px;
+    }
 }
 
 /*============================================================================*/
