--- a/css/main.css
+++ b/css/main.css
@@ -125,3 +125,7 @@ a.list-group-item:hover {
     background-color: #E8EAF6;
     color: #1A237E;
 }
+
+.repo-title{
+    text-transform: capitalize;
+}
