--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,18 @@
 /*============================================================================*
  * Colors
  *============================================================================*/
-
 :root {
     --color-primary: #3F51B5;
     --color-primary-dark: #1A237E;
     --color-primary-light: #E8EAF6;
     --color-primary-accent: #3D5AFE;
 }
-
 /*============================================================================*
  * Layout
  *============================================================================*/
-
+* {
+    box-sizing: border-box;
+}
 html, body {
     width: 100%;
     height: 100%;
@@ -36,9 +36,6 @@ html, body {
     box-shadow: 0 2px 4px #1A237E;
     z-index: 2;
 }
-.heading {
-    text-align: center;
-}
 h3 {
     color: #1A237E;
     font-size: 1.3em;
@@ -46,23 +43,7 @@ h3 {
     padding: 16px;
     border-left: 4px solid indigo;
 }
-.content {
-    position: fixed;
-    top: 60px;
-    right: 0;
-    bottom: 56px;
-    left: 0;
-    z-index: 1;
-    padding: 0 8px;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-}
-.flex-center{
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
+
 /*============================================================================*
  * Navigation
  *============================================================================*/
@@ -104,28 +85,86 @@ h3 {
     color: white;
     background-color: #3F51B5;
 }
-.navbar__tab a:hover, .navbar__tab a.active {
+.navbar__tab a.active,
+.navbar__tab a:hover {
     background-color: #1A237E;
     color: white;
 }
-
 /*============================================================================*
- * Override Bootstrap list-group-item class
+ * Content
  *============================================================================*/
-
-a.list-group-item {
-    color: #3F51B5;
-    padding: 10px;
-    margin: 4px;
-    border-radius: 2px;
-    box-shadow: 0 2px 4px #dde;
+.content {
+    position: fixed;
+    top: 60px;
+    right: 0;
+    bottom: 56px;
+    left: 0;
+    z-index: 1;
+    padding: 0 8px;
     overflow-y: auto;
-}
-a.list-group-item:hover {
-    background-color: #E8EAF6;
-    color: #1A237E;
+    -webkit-overflow-scrolling: touch;
 }
 
-.repo-title{
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.list-item {
+    min-height: 72px;
+    background-color: white;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, .3);
+    padding: 8px;
+    margin: 4px;
+    border-radius: 3px;
+}
+
+@media only screen and (min-width:1024px) {
+    .list-item {
+        max-width: 768px;
+        margin: 4px auto;
+    }
+    h3 {
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width:1440px) {
+    .list-item {
+        max-width: 992px;
+    }
+}
+
+.list-item:hover {
+    background-color: #E8EAF6;
+}
+
+.list-item__heading {
+    display: inline-block;
+    width: 100%;
+    margin: 8px;
+    font: 1.1em Arial, Helvetica, sans-serif;
+    color: #3D5AFE;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+.list-item__heading:hover {
+    text-decoration: underline;
+}
+
+.list-item__text {
+    margin: 0 8px;
+    font: 1em Arial, Helvetica, sans-serif;
+    color: black;
+    text-transform: none;
+}
+
+.list-item--nested {
+    margin: 8px 0;
+}
+
+.repo-title {
     text-transform: capitalize;
 }
