--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,13 +30,13 @@
 
     <!-- Add to homescreen for Chrome on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Giovanni Orlando | Web">
+    <meta name="application-name" content="{{ site.title | escape }}">
     <link rel="icon" sizes="192x192" href="{{ site.url }}/dist/images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Giovanni Orlando | Web">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="{{ site.title | escape }}">
     <link rel="apple-touch-icon" href="{{ site.url }}/dist/images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
