Add SW and npm run scripts
Update README.md

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -41,7 +41,7 @@
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="{{ site.url }}/dist/images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#3F51B5">
+    <meta name="msapplication-TileColor" content="#2a7ae2">
 
     <link rel="icon" href="{{ site.url }}/dist/images/favicon.ico">
     <link rel="canonical" href="https://giovanni-orlando.com/">
