--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -151,11 +151,11 @@ div.container{
 .section.section--repos {
     h1 {        
         margin: 0.75em 0;
-        color: #2a7ae2;
+        color: #0655BC;
         font-size: 1rem;
         font-weight: 700;
         padding-left: 0.75em;
-        border-left: 0.25em solid #2a7ae2;
+        border-left: 0.25em solid #0655BC;
         @media only screen and (min-width: 425px) {
            font-size: 1.1rem; 
         }
@@ -170,7 +170,7 @@ div.container{
         }        
     }
     a {
-        color: #2a7ae2;
+        color: #0655BC;
     }
 }
 .post-content {
