--- a/_assets/styles/content.css
+++ b/_assets/styles/content.css
@@ -174,11 +174,17 @@ div.container {
   font-weight: 700;
   font-family: Courier New, Courier, monospace; }
 
+.post-content blockquote p {
+  letter-spacing: 1px;
+  word-wrap: break-word; }
+
+.post-content em {
+  letter-spacing: 1px; }
+
 .post-content p {
   margin: 0.75em;
   color: black;
-  font-size: 14px;
-  text-align: justify; }
+  font-size: 14px; }
   @media only screen and (min-width: 425px) {
     .post-content p {
       font-size: 1rem; } }
