--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -180,11 +180,17 @@ div.container{
         font-weight: 700;
         font-family: Courier New, Courier, monospace;
     }
+    blockquote p {
+        letter-spacing: 1px;
+        word-wrap: break-word;
+    }
+    em {
+        letter-spacing: 1px;
+    }
     p {
         margin: 0.75em;
         color: black;
         font-size: 14px;
-        text-align: justify;
         @media only screen and (min-width: 425px) {
             font-size: 1rem;
         }
