--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -173,6 +173,11 @@ div.container{
         color: #0655BC;
     }
 }
+.post-header {
+    .post-title {
+        font-size: 2rem;
+    }
+}
 .post-content {
     a:link, a:visited {
         text-align: left;
