--- a/_assets/styles/services.css
+++ b/_assets/styles/services.css
@@ -56,6 +56,8 @@ html, body {
         background-color: #D2FF96; }
       .container.services .service:nth-of-type(odd) {
         background-color: #00A6FB; }
+      .container.services .service:last-of-type {
+        background-color: lightgoldenrodyellow; }
       .container.services .service h1 {
         text-transform: capitalize;
         font-family: Arial, Helvetica, sans-serif;
@@ -145,7 +147,7 @@ html, body {
         transition: 0.2s transform ease-in-out;
         animation: spinner 2s infinite;
         position: relative;
-        top: 12rem;
+        bottom: 12rem;
         z-index: 2; }
 
 @keyframes tilt {
